# oxidized-python

./: .envrc  Cargo.toml  README.org  pyproject.toml  timing_comparison.py
.github/workflows/: CI.yml
python/: README.org  face_embeddings.py  image_processing.py
src/: face_recognition.rs  lib.rs  main.rs
