[package]
name = "oxidized_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxidized_python"
# crate-type = ["cdylib", "lib"]
crate-type = ["lib"]

[[bin]]
name = "oxidized_python"
path = "src/main.rs"

[dependencies]
eyre = "0.6.8"
image = "0.24.6"
numpy = "0.18.0"
onnxruntime = "0.0.14"
pyo3 = { version = "0.18.1", features = ["eyre"] }
